syntax = "proto3";
package pb;


option go_package = "github.com/RoyceAzure/sexy_gpt/account_service/shared/pb";

message User{
    string user_id=1;
    string user_name = 2;
    string email = 3;
}

message UserDTO{
    string user_id=1;
    string user_name = 2;
    string email = 3;
    string role_name=4;
}

message CreateUserRequest{
    string user_name=1;
    string email=2;
    string password=3;
}

message CreateUserResponse{
    UserDTO data=1;
}

message GetUserRequest{
    string user_id=1;
}

message GetUserResponse{
    UserDTO data=1;
}

message GetUserByEmailRequest{
    string email=1;
}

message GetUserByEmailResponse{
    UserDTO data=1;
}

message GetUsersRequest{
    int32 page_size=1;
    int32 page=2;
}

message GetUsersResponse{
    repeated UserDTO data=1;
}

message UpdateUserRequest{
    string user_id=1;
    optional string user_name=2;
    optional string email=3;
    optional string password=4;
}

message UpdateUserResponse{
    User data=1;
}